<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PropertyBook</string>
    <string name="dialog_import_property_book">
        Select a .xls property book you downloaded from PBUSE
    </string>
    <string name="dialog_button_import">Import</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="start_import_fragment_button_text">Select a file to import.</string>
    <string name="import_welcome_text">
        Select an unmodified property book file from PBUSE saved as a .XLS file.
    </string>
    <string name="chooser_label">Pick File</string>
    <string name="pbic_select_button">Import PBICs</string>
    <string name="pbic_select_title">Select PBICs to import.</string>
    <string name="start_import_pb_title">Import a property book</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_nomenclature">Nomenclature: </string>
    <string name="label_sublin">Sub LIN: </string>
    <string name="label_required">Required: </string>
    <string name="label_authorized">Authorized: </string>
    <string name="label_di">Due In: </string>
    <string name="label_sri">SRI: </string>
    <string name="label_erc">ERC: </string>
    <string name="label_auth_doc">Authorizing Document: </string>
    <string name="search_label">Property Book Search</string>
    <string name="search_hint">LIN, NSN, Nomenclature, or SN</string>
    <string name="search_line_number_nomenclature">LIN Nomenclature</string>
    <string name="search_nsn_nomenclature">NSN Nomenclature</string>
    <string name="import_label">Import</string>
    <string name="no_search_result">No search results found for search: </string>
    <string name="lin">LIN</string>
    <string name="lin_label">LIN: </string>
    <string name="nsn">NSN</string>
    <string name="nsn_label">NSN: </string>
    <string name="nomenclature">Nomenclature</string>
    <string name="serial_number">Serial Number</string>
    <string name="serial_number_label">Serial Number: </string>
    <string name="property_book_value">Property Book Value</string>
    <string name="property_book_total_lins">Total LINs</string>
    <string name="property_book_total_items">Total Items</string>
    <string name="statistics">Statistics</string>
    <string name="lin_nomenclature_label">LIN Nomenclature: </string>
    <string name="nsn_nomenclature_label">NSN Nomenclature: </string>
    <string name="no_serial_numbers">No serial numbers for this NSN.</string>
    <string name="no_nsn">No NSNs for this LIN.</string>
    <string name="import_select_file_title">Select property book.</string>
    <string name="select_import_file">Select file</string>
    <string name="import_header">Import property book</string>
    <string name="wrong_file_type">Incorrect file type.</string>

    <string name="error_reading_excel_file">Error reading excel file.</string>
    <string name="import_complete">Import complete!</string>
    <string name="import_starting">Starting Import</string>
    <string name="import_progress_title">Importing Property Book</string>
    <string name="import_failed">
        Import failed, check your file and try again.
    </string>

    <string name="web_site_link">
        <a href="www.propertybookapp.com">www.propertybookapp.com</a>
    </string>
    <string name="facebook_link">
        <a href="www.facebook.com/PropertyBookApp">www.facebook.com/PropertyBookApp</a>
    </string>
    <string name="google_plus_link">
        <a href="www.google.com/+Propertybookapp">www.google.com/+Propertybookapp</a>
    </string>
    <string name="loading_property_book">Loading property book.</string>


</resources>