<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="A12345"
            android:id="@+id/lin"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/primary_color"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CONTAINER ISU 90"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:id="@+id/nomenclature"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sub_lin"
                android:layout_gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sub LIN: A12345"
                android:id="@+id/sub_lin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sub_lin"
                android:layout_gravity="center_vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lin_card_expander">
        <TextView
            style="@style/due_in_label"
            android:text="@string/label_authorized"
            android:id="@+id/authorized_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView style="@style/erc_value"
                  android:id="@+id/authorized_value"
                  android:layout_toRightOf="@+id/authorized_label"
                  android:text="5"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
        <TextView
            style="@style/due_in_label"
            android:id="@+id/required_label"
            android:text="@string/label_required"
            android:layout_below="@+id/authorized_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView style="@style/erc_value"
                  android:id="@+id/required_value"
                  android:layout_toRightOf="@+id/authorized_label"
                  android:layout_below="@+id/authorized_label"
                  android:text="5"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />

        <TextView
            style="@style/due_in_label"
            android:id="@+id/sri_label"
            android:layout_toRightOf="@+id/auth_doc_label"
            android:text="@string/label_sri"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView style="@style/erc_value"
                  android:id="@+id/sri_value"
                  android:layout_toRightOf="@+id/sri_label"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />

        <TextView
            style="@style/due_in_label"
            android:text="@string/label_erc"
            android:id="@+id/erc_label"
            android:layout_below="@+id/sri_label"
            android:layout_toRightOf="@+id/auth_doc_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView style="@style/erc_value"
                  android:id="@+id/erc_value"
                  android:layout_toRightOf="@+id/erc_label"
                  android:layout_below="@+id/sri_label"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />

        <TextView
            style="@style/due_in_label"
            android:text="@string/label_di"
            android:id="@+id/due_in_label"
            android:layout_below="@+id/required_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView style="@style/erc_value"
                  android:id="@+id/due_in_value"
                  android:layout_below="@+id/required_label"
                  android:layout_toRightOf="@+id/authorized_label"
                  android:text="0"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />

        <TextView
            style="@style/due_in_label"
            android:text="@string/label_auth_doc"
            android:id="@+id/auth_doc_label"
            android:layout_below="@+id/due_in_label"
            android:paddingBottom="15sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
          android:id="@+id/auth_doc_value"
          android:layout_below="@+id/due_in_label"
          android:layout_toRightOf="@+id/auth_doc_label"
          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <TextView
            style="@style/due_in_label"
            android:id="@+id/pbic_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/erc_label"
            android:layout_toRightOf="@+id/auth_doc_label"
            android:text="PBIC: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView style="@style/erc_value"
              android:id="@+id/pbic_value"
              android:layout_below="@+id/erc_label"
              android:layout_toRightOf="@+id/pbic_label"
              android:text="PBIC ##"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
    </RelativeLayout>
</LinearLayout>
